# nmea_hardware_interface-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  nmea_controller_interface.xml  nmea_hardware_interface.xml  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
config/: nmea.rviz  nmea_example.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/nmea_hardware_interface/: geopose_publisher.hpp  gps_hardware_interface.hpp
launch/: nmea_example.launch.py
rpm/: ros-galactic-nmea-hardware-interface.spec  ros-humble-nmea-hardware-interface.spec  ros-iron-nmea-hardware-interface.spec  ros-kilted-nmea-hardware-interface.spec  ros-rolling-nmea-hardware-interface.spec  template.spec
src/: geopose_publisher.cpp  gps_hardware_interface.cpp
urdf/: nmea_example.urdf.xml
